# os

./: CMakeLists.txt  README.md  cpu.h  interpreter.c  interpreter.h  ram.h
files/: Makefile  cpu.c  kernel.c  kernel.h  main.c  memorymanager.c  memorymanager.h  pcb.c  pcb.h  ram.c  script.sh  shell.c
